# pgmq-sqlalchemy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pgmq.sql  pgmq_tests.template.env  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: codecov.yml  copilot-setup-steps.yml  examples.yml  publish.yml
doc/: api-reference.rst  conf.py  custom_autodoc.py  development.rst  example-with-fastapi-pub-sub.rst  getting-started.rst  index.rst  installation.rst  link_docstring.py  release.rst  requirements.txt  update_docstring.py
doc/locale/: README.zh_TW.md
examples/fastapi_pub_sub/: README.md  api.py  consumer.py  create_orders_coordinator.py  pyproject.toml  requirements.txt
examples_tests/: __init__.py  conftest.py  test_fastapi_pub_sub.py
examples_tests/integration/: test_fastapi_integration.py
examples_tests/unit/: test_fastapi_pub_sub.py
examples_tests/utils/: console.py
pgmq_sqlalchemy/: __init__.py  _docstring.py  _statement.py  _types.py  _utils.py  async_func.py  func.py  operation.py  queue.py  schema.py
pgmq_sqlalchemy/dialects/db_api/: utils.py
pgmq_sqlalchemy/dialects/sqlalchemy/: utils.py
pgmq_sqlalchemy/statement/: __init__.py  db_api.py  numeric.py  sqlalchemy.py  utils.py
scripts/: compelete_missing_async_methods.py  compelete_missing_async_methods_for_operation.py  compelete_missing_async_methods_for_queue.py  compelete_missing_test_for_operation.py  compelete_missing_test_for_queue.py
scripts/ci/pre_commit/: check_sync_async_method_for_queue.py  check_sync_async_methods_for_operation.py  check_sync_async_methods_for_queue.py
scripts/scripts_utils/: common_ast.py  config.py  console.py  formatting.py  operation_ast.py  operation_test_ast.py  queue_ast.py  queue_test_ast.py  test_ast.py
tests/: _async_utils.py  _utils.py  conftest.py  constant.py  fixture_deps.py  test_construct_pgmq.py  test_create_queue.py  test_event_loop.py  test_func_poc.py  test_operation.py  test_queue.py
