[project]
name = "pgmq-sqlalchemy"
version = "0.2.0"
description = "More flexible PGMQ Postgres extension Python client that using sqlalchemy ORM, supporting both async and sync engines, sessionmakers or built from dsn."
authors = [
    {name = "jason810496", email = "810496@email.wlsh.tyc.edu.tw"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["pgmq", "PGMQ", "sqlalchemy", "SQLAlchemy", "tembo_pgmq_python"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.9"
dependencies = [
    "SQLAlchemy>=2.0.31",
]

[project.urls]
Homepage = "https://github.com/jason810496/pgmq-sqlalchemy"
Repository = "https://github.com/jason810496/pgmq-sqlalchemy"
Documentation = "https://pgmq-sqlalchemy.readthedocs.io/en/latest/"

[project.optional-dependencies]
asyncpg = ["asyncpg>=0.29.0", "greenlet>=3.0.3"]
pg8000 = ["pg8000>=1.31.2"]
psycopg = ["psycopg>=3.2.1"]
psycopg2-binary = ["psycopg2-binary>=2.9.9"]
psycopg2cffi = ["psycopg2cffi>=2.9.0"]

# Include dependencies by `uv sync --group dev`
[dependency-groups]
dev = [
    {include-group = "postgresql-drivers"},
    {include-group = "test"},
    {include-group = "docs"},
    {include-group = "fastapi-pub-sub-example"},
    "rich>=14.2.0",
    "ruff>=0.14.10",
    "libcst>=1.8.6",
]
postgresql-drivers = [
    "asyncpg>=0.29.0",
    "greenlet>=3.0.3",
    "pg8000>=1.31.2",
    "psycopg>=3.2.1",
    "psycopg2-binary>=2.9.9",
    "psycopg2cffi>=2.9.0",
]
test = [
    "pytest>=7.4.4,<8.0",
    "pytest-asyncio>=0.23.8",
    "pytest-lazy-fixture>=0.6.3",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "filelock>=3.15.4",
]
docs = [
    "sphinx>=7.3.7",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-copybutton>=0.5.2",
]
fastapi-pub-sub-example = [
    "fastapi>=0.104.0",
    "httpx>=0.28.1",
    "uvicorn>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
