[project]
name = "fastapi-pub-sub-example"
version = "0.1.0"
description = "FastAPI pub/sub example using pgmq-sqlalchemy"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "pgmq-sqlalchemy>=0.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
